--- a/style.css
+++ b/style.css
@@ -1,13 +1,41 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
 a {
   color: orange;
 }
-
 a:hover {
   color: black;
 }
-/*# sourceMappingURL=style.css.map */
+
+#weather {
+  margin: 80px 0;
+}
+#weather .box {
+  background-color: #9c6644;
+  border-radius: 20px;
+  width: 250px;
+  height: 350px;
+  text-align: center;
+  padding: 20px;
+  flex-direction: column;
+}
+#weather .box .data h1, #weather .box .data h2 {
+  color: white;
+  font-size: 20px;
+  margin: 20px 0 0 0;
+}
+#weather .box input {
+  border-radius: 20px;
+  margin: 20px 0;
+  width: 150px;
+}
+#weather .box #btn {
+  background-color: #f8c471;
+  border-radius: 20px;
+  color: white;
+  width: 100px;
+  display: block;
+}/*# sourceMappingURL=style.css.map */
