--- a/_weather.sass
+++ b/_weather.sass
@@ -3,23 +3,23 @@
     .box
         background-color: #9c6644
         border-radius: 20px
-        width: 250px
-        height: 350px
+        width: 240px
+        height: 370px
         text-align: center
         padding: 20px
         flex-direction: column
+        justify-content: center
         .data
             h1,h2
                 color: #ffff
-                font-size: 20px
+                font-size: 22px
                 margin: 20px 0 0 0
         input
             border-radius: 20px
             margin: 20px 0
-            width: 150px
-        #btn
+            padding: 8px 9px
+        .btn
             background-color: #f8c471
             border-radius: 20px
             color: #ffff
-            width: 100px
-            display: block
+            padding: 5px 25px
