--- a/style.css
+++ b/style.css
@@ -16,26 +16,26 @@ a:hover {
 #weather .box {
   background-color: #9c6644;
   border-radius: 20px;
-  width: 250px;
-  height: 350px;
+  width: 240px;
+  height: 370px;
   text-align: center;
   padding: 20px;
   flex-direction: column;
+  justify-content: center;
 }
 #weather .box .data h1, #weather .box .data h2 {
   color: white;
-  font-size: 20px;
+  font-size: 22px;
   margin: 20px 0 0 0;
 }
 #weather .box input {
   border-radius: 20px;
   margin: 20px 0;
-  width: 150px;
+  padding: 8px 9px;
 }
-#weather .box #btn {
+#weather .box .btn {
   background-color: #f8c471;
   border-radius: 20px;
   color: white;
-  width: 100px;
-  display: block;
+  padding: 5px 25px;
 }/*# sourceMappingURL=style.css.map */
